--- a/build.yaml
+++ b/build.yaml
@@ -3,4 +3,8 @@ include:
     shield: totem_left
   - board: seeeduino_xiao_ble
     shield: totem_right
+  - board: seeeduino_xiao_rp2040
+    shield: totem_left
+  - board: seeeduino_xiao_rp2040
+    shield: totem_right
 # there is no settingsreset (needed) for the XIAO
